--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container{
+    height: 100vh;
+    width: 100%;
+    background-color: red;
+}
+
+nav{
+    position: fixed;
+    right: 30px;
+    top: 40px;
+}
+
+nav ul li{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+    line-height: 50px;
+    font-size: 30px;
+    margin: 0 20px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: black;
+}
