--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,34 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container{
     height: 100vh;
     width: 100%;
+    position: relative;
+}
+
+#primo{
     background-color: red;
 }
 
+#secondo{
+    background-color: green;
+}
+
+#terzo{
+    background-color: yellow;
+}
+
+/* ---- menù ---- */
 nav{
     position: fixed;
     right: 30px;
     top: 40px;
+    z-index: 2;
 }
 
 nav ul li{
@@ -31,4 +49,32 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
+
+
+/* ---- scarpa ---- */
+
+.scarpa img{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/* ---- scritta ---- */
+
+.scritta{
+    width: 35%;
+    text-transform: uppercase;
+    position: absolute;
+    text-align: center;
+    color: yellow;
+    font-size: 40px;
+    font-weight: bold;
+    top: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
